changes made in  web.config

--- a/DVCS Exercise/WebApp/WebApp.csproj
+++ b/DVCS Exercise/WebApp/WebApp.csproj
@@ -415,6 +415,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="samples\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
